# Iungo

./: .gitignore  README.md  compose.yaml  examples.http  go.sum
.github/workflows/: docker-image-consumer.yml
backend/: Cargo.toml  Dockerfile  go.mod
backend/src/: api.rs  api_base.rs  main.rs  student_api.rs
consumer/: Cargo.toml  Dockerfile
consumer/src/: main.rs
internal/server/: routes.go
migrations/: 20240123233025_init.up.sql
