[package]
name = "consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
lapin = "2.3.1"
reqwest = { version = "0.11.23", features = ["json"] }
serde = "1.0.196"
serde_json = "1.0.113"
tokio = { version = "1.35.1", features = ["full"] }
tokio-executor-trait = "2.1.1"
tokio-reactor-trait = "1.1.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
